# BuildUs

./: .gitignore  .gitlab-ci.yml  README.md
.git2/: HEAD  config  index
.git2/logs/: HEAD
BuildUs/: CMakeLists.txt  buildus.cpp  config.buildus  config2.buildus  test1.cpp  test2.cpp  test3.cpp
BuildUs/buildussystem/: CMakeLists.txt  buildussystem.cpp  buildussystem.h
BuildUs/tests/: CMakeLists.txt  tests.cpp
